...
        </array>
    </customFonts>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="1" green="0.77599471249999996" blue="0.26187586629999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <textAttributes key="titleTextAttributes">
                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Pancake Houses" id="Zdf-7t-Un8">
                        <barButtonItem key="rightBarButtonItem" title="About" id="n2a-4C-alb">
                            <connections>
                                <segue destination="M4M-oT-X8b" kind="show" id="ruQ-ZT-XY7"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SZe-qt-PcB">
                                                <rect key="frame" x="55.5" y="253" width="194" height="30"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjY-WN-ljR">
                                                        <rect key="frame" x="0.0" y="0.0" width="194" height="30"/>
                                                        <state key="normal" title="Show/Hide Copyright Notice"/>
                                                        <connections>
                                                            <action selector="handleShowHideTapped:" destination="M4M-oT-X8b" eventType="touchUpInside" id="VS0-X5-XDD"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
...
